Fix z-index bug with suggest box
On the front page on short screens, the suggest box was being obscured
by the footer, rendering parts of it unclickable

--- a/powo-portal/src/main/frontend/src/sass/components/_search.scss
+++ b/powo-portal/src/main/frontend/src/sass/components/_search.scss
@@ -93,5 +93,6 @@
     left: 5%;
     width: 90%;
     transform: translateY(-50%);
+    z-index: 50;
   }
 }
